--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-image-magnifiers": "^1.4.0",
     "react-responsive": "^10.0.1",
     "react-swipeable": "^7.0.2"
   },
