--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.10.3",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-responsive": "^10.0.1",
-    "react-swipeable": "^7.0.2"
+    "@types/mongodb": "^4.0.6",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.330.0",
+    "mongodb": "^6.16.0",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
+    "react-swipeable": "^7.0.1",
+    "react-zoom-pan-pinch": "^3.7.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
