--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "@types/mongodb": "^4.0.6",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.330.0",
