--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "framer-motion": "^11.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
     "mongodb": "^6.16.0",
     "next": "14.1.0",
