--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@prisma/client": "^6.8.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
+    "@types/uuid": "^10.0.0",
+    "cloudinary": "^1.41.3",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
     "mongodb": "^6.16.0",
+    "multer": "^2.0.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-responsive": "^9.0.2",
     "react-swipeable": "^7.0.1",
-    "react-zoom-pan-pinch": "^3.7.0"
+    "react-zoom-pan-pinch": "^3.7.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
