--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-responsive": "^9.0.2",
     "react-swipeable": "^7.0.1",
     "react-zoom-pan-pinch": "^3.7.0",
