--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "multer-storage-cloudinary": "^4.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-fireworks": "^1.0.4",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-responsive": "^9.0.2",
