--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-fireworks": "^1.0.4",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.2.14",
     "react-responsive": "^9.0.2",
     "react-swipeable": "^7.0.1",
     "react-zoom-pan-pinch": "^3.7.0",
