--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
+    "cookies-next": "^6.0.0",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
@@ -34,6 +36,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -41,6 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.5.4",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
