--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/uuid": "^10.0.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
-    "cookies-next": "^6.0.0",
+    "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.330.0",
-    "mongodb": "^6.16.0",
+    "lucide-react": "^0.358.0",
+    "mongodb": "^6.5.0",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
     "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-confetti": "^6.4.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-confetti": "^6.1.0",
+    "react-dom": "18.2.0",
     "react-fireworks": "^1.0.4",
-    "react-hot-toast": "^2.5.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-medium-image-zoom": "^5.2.14",
     "react-responsive": "^9.0.2",
@@ -37,15 +37,15 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.67",
+    "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.5.4",
+    "postcss": "8.4.38",
     "prisma": "^6.8.2",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "tailwindcss": "3.4.1",
+    "typescript": "5.4.5"
   }
 }
