--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,8 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/site-ico.ico",
-      "sizes": "32x32",
+      "src": "/favicon.ico",
+      "sizes": "54x94",
       "type": "image/x-icon"
     }
   ]
