Update: общие Улучшения

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/favicon.ico",
+      "src": "/site-ico.ico",
       "sizes": "54x94",
       "type": "image/x-icon"
     }
