--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,14 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/site-ico.ico",
-      "sizes": "16x16",
-      "type": "image/x-icon"
+      "src": "/icon.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ]
 } 
