--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,9 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/site-ico.ico",
       "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
+      "type": "image/x-icon"
     }
   ]
 } 
