--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mongodb": "^6.5.0",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
-    "next": "14.1.0",
+    "next": "^14.2.29",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
