--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cookies-next": "^4.1.1",
+    "csv-parse": "^5.6.0",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.358.0",
@@ -33,7 +34,8 @@
     "react-responsive": "^9.0.2",
     "react-swipeable": "^7.0.1",
     "react-zoom-pan-pinch": "^3.7.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
