Update: Интеграция платежной системы

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/uuid": "^10.0.0",
@@ -34,6 +36,7 @@
     "react-responsive": "^9.0.2",
     "react-swipeable": "^7.0.1",
     "react-zoom-pan-pinch": "^3.7.0",
+    "stripe": "^18.2.1",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
