--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-pay/button-react": "^3.1.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/client": "^6.8.2",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
