--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cookies-next": "^4.1.1",
