--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@prisma/client": "^6.8.2",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.3",
     "cloudinary": "^1.41.3",
     "cookies-next": "^4.1.1",
     "csv-parse": "^5.6.0",
