--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.19",
+    "critters": "^0.0.23",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "postcss": "8.4.38",
+    "postcss-preset-env": "^10.2.1",
     "prisma": "^6.8.2",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.5"
