--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartliving",
+  "name": "smart-living",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,55 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google-pay/button-react": "^3.1.0",
-    "@paypal/react-paypal-js": "^8.8.3",
-    "@prisma/client": "^6.8.2",
-    "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.3.1",
-    "@types/canvas-confetti": "^1.9.0",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/mongodb": "^4.0.6",
-    "@types/uuid": "^10.0.0",
-    "@vercel/analytics": "^1.5.0",
-    "bcryptjs": "^2.4.3",
-    "canvas-confetti": "^1.9.3",
-    "cloudinary": "^1.41.3",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.24.1",
+    "@tanstack/react-table": "^8.13.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
-    "csv-parse": "^5.6.0",
-    "framer-motion": "^11.0.3",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.358.0",
-    "mongodb": "^6.5.0",
-    "multer": "^2.0.0",
-    "multer-storage-cloudinary": "^4.0.0",
-    "next": "^14.2.29",
-    "react": "18.2.0",
-    "react-confetti": "^6.1.0",
-    "react-dom": "18.2.0",
-    "react-fireworks": "^1.0.4",
-    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.344.0",
+    "mongodb": "^6.17.0",
+    "next": "^15.3.3",
+    "next-themes": "^0.2.1",
+    "react": "^18",
+    "react-confetti": "^6.4.0",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-medium-image-zoom": "^5.2.14",
-    "react-responsive": "^9.0.2",
-    "react-swipeable": "^7.0.1",
-    "react-zoom-pan-pinch": "^3.7.0",
-    "stripe": "^18.2.1",
-    "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.67",
-    "@types/react-dom": "18.2.22",
-    "autoprefixer": "10.4.19",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "critters": "^0.0.23",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "8.4.38",
-    "postcss-preset-env": "^10.2.1",
-    "prisma": "^6.8.2",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.4.5"
+    "eslint": "^8",
+    "eslint-config-next": "^15.3.3",
+    "postcss": "^8",
+    "postcss-preset-env": "^10.2.3",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
