--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mongodb": "^4.0.6",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.3",
     "cloudinary": "^1.41.3",
     "cookies-next": "^4.1.1",
     "csv-parse": "^5.6.0",
@@ -49,6 +50,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "postcss": "8.4.38",
+    "postcss-preset-env": "^10.2.3",
     "prisma": "^6.8.2",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.5"
