--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@stripe/stripe-js": "^7.3.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "canvas-confetti": "^1.9.3",
@@ -23,10 +25,11 @@
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.358.0",
-    "mongodb": "^6.5.0",
+    "mongodb": "^6.17.0",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
-    "next": "^14.2.29",
+    "next": "^15.3.3",
+    "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
@@ -37,6 +40,8 @@
     "react-responsive": "^9.0.2",
     "react-swipeable": "^7.0.1",
     "react-zoom-pan-pinch": "^3.7.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stripe": "^18.2.1",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
