--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
+    "mkcert": "^3.2.0",
     "postcss": "8.4.38",
     "postcss-preset-env": "^10.2.3",
     "prisma": "^6.8.2",
